--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-select-async-paginate": "^0.7.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
